@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2870 2019/07/30 22:31:32 brook Exp $
+# $NetBSD: Makefile,v 1.2871 2019/07/30 22:58:20 brook Exp $
 #
 
 COMMENT=	Development utilities
@@ -23,6 +23,7 @@ SUBDIR+=	R-bit64
 SUBDIR+=	R-blob
 SUBDIR+=	R-checkmate
 SUBDIR+=	R-cli
+SUBDIR+=	R-clipr
 SUBDIR+=	R-crayon
 SUBDIR+=	R-evaluate
 SUBDIR+=	R-fansi
