@@ -1,0 +1,2 @@
+Simple utility functions to read from and write to the Windows, OS X,
+and X11 clipboards.
