@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/30 22:58:20 brook Exp $
+
+CATEGORIES=	devel R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/clipr/
+COMMENT=	Read and write from the system clipboard
+LICENSE=	gnu-gpl-v3
+
+R_PKGNAME=	clipr
+R_PKGVER=	0.7.0
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
